title alignment fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3349,7 +3349,6 @@ input, select, textarea {
 
 	.project-title {
 		color:#0a89b0;
-		text-align:center;
 	}
 
 	.project-title span {
